NIAD-1018: Remove Transaction from Edifact Parser model (#32)
* NIAD-1018: remove Transaction segments from EDIFACT examples

- Remove Transaction segments from .dat files
- Remove Transaction segments from EdifactParserTest fixture class

* NIAD-1013: Add SG20 segment code (#23)

RangeDetail is used to define lower and upper bounds for
numeric data. At least one of the bounds must be given.

ReferencePopulationDefinitionFreeText is a qualified form
of a FreeText segment, allowing between 1 and 5 (inc.)
strings intended for population definitions.

* NIAD-963: Rename message queues  (#25)

* NIAD-1018: remove references to ReferenceTransactionNumber segment

* NIAD-1018: partially remove references to Transaction

- Removed Transaction from EdifactParser
- Removed Transaction from InboundMessageHandler
- Removed Transaction from InboundMessageHandlerTest
- Removed Transaction from EdifactToFhirService
- Removed Transaction from EdifactToFhirServiceTest

NIAD-1018: remove references to Transaction in unit tests

* NIAD-1018: fix Exceptions that occured during execution

- Fix NullPointerException by commenting out unused TRANSACTION_TYPE string property in GpOutboundQueueService
- Fix EdifactValidationException by using MESSAGE_TRAILER KEY to parse messages in EdifactParser

* NIAD-1018: remove all references to ReferenceTransactionType segment

* NIAD-1018: remove TransactionType segment

- Remove TransactionType class
- Remove references to TransactionType in other classes

* NIAD-1018: remove all references to Transaction

- Remove Transaction class
- Comment out Transaction from InboundMessageHandlerTest

* NIAD-1018: remove unnecessary imports (flagged by checkstyle)

* NIAD-1018: remove commented out references to Transaction

* NIAD-1018: remove Transaction from Sequence

* NIAD-1018: refactor findFirstGpCode method to use streams

* NIAD-1018: refactor test to use Message instead of Transaction

- Refacto